--- a/Frontends/MovieApi.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Frontends/MovieApi.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -3,4 +3,5 @@
 @using MovieApi.Dto.Dtos.UserRegisterDtos
 @using MovieApi.Dto.Dtos.AdminMovieDtos
 @using MovieApi.Dto.Dtos.AdminCategoryDtos
+@using MovieApi.Dto.Dtos.AdminSeriesDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
