--- a/Frontends/MovieApi.WebUI/Views/Shared/Components/_AdminLayoutHeadComponentPartial/Default.cshtml
+++ b/Frontends/MovieApi.WebUI/Views/Shared/Components/_AdminLayoutHeadComponentPartial/Default.cshtml
@@ -6,6 +6,7 @@
     <!-- loader-->
     <link href="/ltr/assets/css/pace.min.css" rel="stylesheet" />
     <script src="/ltr/assets/js/pace.min.js"></script>
+    <link href="/css/cinema-admin.css" rel="stylesheet">
 
     <!--plugins-->
     <link href="/ltr/assets/plugins/perfect-scrollbar/css/perfect-scrollbar.css" rel="stylesheet" />
