--- a/Frontends/MovieApi.WebUI/Areas/Admin/Views/AdminMovie/MovieList.cshtml
+++ b/Frontends/MovieApi.WebUI/Areas/Admin/Views/AdminMovie/MovieList.cshtml
@@ -110,7 +110,7 @@
             <div>
                 <h5 class="cinema-title">
                     <span class="badge-dot"></span>
-                    Film Yönetim Paneli
+                    🎬 Film Yönetim Paneli
                 </h5>
                 <div class="cinema-sub">Katalog, durum ve içerik yönetimi • sinematik görünüm</div>
             </div>
@@ -218,6 +218,10 @@
 
                             <td>
                                 <div class="d-flex gap-2 flex-wrap">
+                                    <a href="/Admin/AdminMovie/DeleteMovies/@item.MovieId" class="btn-mini btn-mini-danger">
+                                        <ion-icon name="create-outline"></ion-icon>
+                                        Sil
+                                    </a>
                                     <a href="javascript:;" class="btn-mini btn-mini-warning">
                                         <ion-icon name="create-outline"></ion-icon>
                                         Güncelle
