--- a/Frontends/MovieApi.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Frontends/MovieApi.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -4,4 +4,5 @@
 @using MovieApi.Dto.Dtos.AdminMovieDtos
 @using MovieApi.Dto.Dtos.AdminCategoryDtos
 @using MovieApi.Dto.Dtos.AdminSeriesDtos
+@using MovieApi.Dto.Dtos.AdminReviewDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
